testdata/baselines/reference/submodule/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.errors.txt
multiLinePropertyAccessAndArrowFunctionIndent1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.
multiLinePropertyAccessAndArrowFunctionIndent1.ts(1,18): error TS2304: Cannot find name 'role'.
multiLinePropertyAccessAndArrowFunctionIndent1.ts(2,18): error TS2304: Cannot find name 'Role'.
multiLinePropertyAccessAndArrowFunctionIndent1.ts(4,26): error TS2503: Cannot find namespace 'ng'.
multiLinePropertyAccessAndArrowFunctionIndent1.ts(4,53): error TS2304: Cannot find name 'Role'.


==== multiLinePropertyAccessAndArrowFunctionIndent1.ts (5 errors) ====
    return this.edit(role)
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
                     ~~~~
!!! error TS2304: Cannot find name 'role'.
        .then((role: Role) =>
                     ~~~~
!!! error TS2304: Cannot find name 'Role'.
            this.roleService.add(role)
                .then((data: ng.IHttpPromiseCallbackArg<Role>) => data.data));
                             ~~
!!! error TS2503: Cannot find namespace 'ng'.
                                                        ~~~~
!!! error TS2304: Cannot find name 'Role'.
    